{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 275,
  "lineage": "29481e05-c834-4201-10ee-1eea85141fd3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associations": [
              {
                "main": true,
                "route_table_association_id": "rtbassoc-dbdc65a2",
                "route_table_id": "rtb-5257ff34",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "id": "rtb-5257ff34",
            "owner_id": "578368453353",
            "route_table_id": "rtb-5257ff34",
            "routes": [
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-00c9c441beb5dafbe"
              },
              {
                "cidr_block": "10.1.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-099903c2d88720655"
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-92237df6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "route-table-default"
            },
            "vpc_id": "vpc-4ec09329"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "data",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associations": [
              {
                "main": true,
                "route_table_association_id": "rtbassoc-dbdc65a2",
                "route_table_id": "rtb-5257ff34",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "id": "rtb-5257ff34",
            "owner_id": "578368453353",
            "route_table_id": "rtb-5257ff34",
            "routes": [
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-00c9c441beb5dafbe"
              },
              {
                "cidr_block": "10.1.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-099903c2d88720655"
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-92237df6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "route-table-default"
            },
            "vpc_id": "vpc-4ec09329"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "data",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associations": [
              {
                "main": true,
                "route_table_association_id": "rtbassoc-dbdc65a2",
                "route_table_id": "rtb-5257ff34",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "id": "rtb-5257ff34",
            "owner_id": "578368453353",
            "route_table_id": "rtb-5257ff34",
            "routes": [
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-00c9c441beb5dafbe"
              },
              {
                "cidr_block": "10.1.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-099903c2d88720655"
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-92237df6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "route-table-default"
            },
            "vpc_id": "vpc-4ec09329"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "data",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associations": [
              {
                "main": true,
                "route_table_association_id": "rtbassoc-dbdc65a2",
                "route_table_id": "rtb-5257ff34",
                "subnet_id": ""
              }
            ],
            "filter": null,
            "id": "rtb-5257ff34",
            "owner_id": "578368453353",
            "route_table_id": "rtb-5257ff34",
            "routes": [
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-00c9c441beb5dafbe"
              },
              {
                "cidr_block": "10.1.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-099903c2d88720655"
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-92237df6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "route-table-default"
            },
            "vpc_id": "vpc-4ec09329"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:vpc/vpc-4ec09329",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-f8277890",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-b0d8a1d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4ec09329",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-5257ff34",
            "owner_id": "578368453353",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:vpc/vpc-4ec09329",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-f8277890",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-b0d8a1d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4ec09329",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-5257ff34",
            "owner_id": "578368453353",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:vpc/vpc-4ec09329",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-f8277890",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-b0d8a1d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4ec09329",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-5257ff34",
            "owner_id": "578368453353",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:vpc/vpc-4ec09329",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-f8277890",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-b0d8a1d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-4ec09329",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-5257ff34",
            "owner_id": "578368453353",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03b7a720bb14c3050",
            "domain": "vpc",
            "id": "eipalloc-06e6560f9ea6d0d12",
            "instance": "i-0b52ff8251d856383",
            "network_interface": "eni-09c8ffff5a28e913d",
            "private_dns": "ip-172-31-42-176.ap-northeast-1.compute.internal",
            "private_ip": "172.31.42.176",
            "public_dns": "ec2-3-113-65-164.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.113.65.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastion-ip"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.bastion_instance"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04e523b73832ed450",
            "domain": "vpc",
            "id": "eipalloc-05ed314d46cd76fb6",
            "instance": "i-0a42067ab684489fb",
            "network_interface": "eni-012400c35485921eb",
            "private_dns": "ip-10-2-0-16.ap-northeast-1.compute.internal",
            "private_ip": "10.2.0.16",
            "public_dns": "ec2-13-115-134-68.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.115.134.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-backend-ip"
            },
            "timeouts": {
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.instance_backend"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01190493d4207f2a5",
            "domain": "vpc",
            "id": "eipalloc-0353de0d8c74131d7",
            "instance": "i-0a6aae8bbe7cb160e",
            "network_interface": "eni-03b1dcd7634c7ca5a",
            "private_dns": "ip-10-1-0-16.ap-northeast-1.compute.internal",
            "private_ip": "10.1.0.16",
            "public_dns": "ec2-18-182-189-107.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.189.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "stg-backend-ip"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.instance_backend"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08e7d434cd8deba5d",
            "domain": "vpc",
            "id": "eipalloc-0ddcca9963167da75",
            "instance": "i-085d78bda6e7ebed5",
            "network_interface": "eni-0a2a53f76d4379b21",
            "private_dns": "ip-10-0-0-16.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.16",
            "public_dns": "ec2-54-64-109-129.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.64.109.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-backend-ip"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.instance_backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06d9ad3f86032262d",
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:instance/i-0b52ff8251d856383",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b52ff8251d856383",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevStgBastion",
            "monitoring": false,
            "primary_network_interface_id": "eni-09c8ffff5a28e913d",
            "private_dns": "ip-172-31-42-176.ap-northeast-1.compute.internal",
            "private_ip": "172.31.42.176",
            "public_dns": "ec2-3-113-65-164.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.113.65.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-00d5c8fb1e44312f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "bastion"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7e342837",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077ccf5474c524d69"
            ]
          },
          "depends_on": [
            "aws_security_group.bastion_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0862747aa8ec16761",
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:instance/i-0a42067ab684489fb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a42067ab684489fb",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ProdPawrentsBackend",
            "monitoring": false,
            "primary_network_interface_id": "eni-012400c35485921eb",
            "private_dns": "ip-10-2-0-16.ap-northeast-1.compute.internal",
            "private_ip": "10.2.0.16",
            "public_ip": "3.113.5.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0a933d1aedba04c62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05de02cad5ce312c5",
            "tags": {
              "Name": "prod-backend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077abba92df0889fa"
            ]
          },
          "depends_on": [
            "aws_security_group.backend_public",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-062d483d60fe1b442",
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:instance/i-0a6aae8bbe7cb160e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a6aae8bbe7cb160e",
            "instance_state": "stopped",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "UatPawrentsBackend",
            "monitoring": false,
            "primary_network_interface_id": "eni-03b1dcd7634c7ca5a",
            "private_dns": "ip-10-1-0-16.ap-northeast-1.compute.internal",
            "private_ip": "10.1.0.16",
            "public_ip": "18.182.189.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0c92f0a97c432247d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7fa8c2132f3d8b3",
            "tags": {
              "Name": "stg-backend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b88cbc07a7018d14"
            ]
          },
          "depends_on": [
            "aws_security_group.backend_public",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091830e484c3984fa",
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:instance/i-085d78bda6e7ebed5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-085d78bda6e7ebed5",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "DevBackendApp",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2a53f76d4379b21",
            "private_dns": "ip-10-0-0-16.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.16",
            "public_ip": "54.64.109.129",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "iops": 100,
                "volume_id": "vol-0ae458705facd6b3e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a440140b759c626",
            "tags": {
              "Name": "dev-backend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b4f5f0dfc6729de"
            ]
          },
          "depends_on": [
            "aws_security_group.backend_public",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068b4585f274ce8ec",
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:instance/i-08b630f8cb3d57726",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08b630f8cb3d57726",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ProdPawrentsDatabase",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3f33962c68e4f47",
            "private_dns": "ip-10-2-1-16.ap-northeast-1.compute.internal",
            "private_ip": "10.2.1.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0dc4778d7817652ec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084dd404d179e14bb",
            "tags": {
              "Name": "prod-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c322858861ead701"
            ]
          },
          "depends_on": [
            "aws_security_group.db_private",
            "aws_subnet.subnet_private"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af7311bae0e25887",
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:instance/i-008d788b5aeae195a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-008d788b5aeae195a",
            "instance_state": "stopped",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "UatPawrentsDatabase",
            "monitoring": false,
            "primary_network_interface_id": "eni-0aee9f0b106bdf724",
            "private_dns": "ip-10-1-1-16.ap-northeast-1.compute.internal",
            "private_ip": "10.1.1.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-091603792f6593efc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aff3f8a92f59e0d5",
            "tags": {
              "Name": "stg-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077aed766b9d8a479"
            ]
          },
          "depends_on": [
            "aws_security_group.db_private",
            "aws_subnet.subnet_private"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01a74235d69740cfa",
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:instance/i-09240d6efe448846a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09240d6efe448846a",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "DevPawrentsDatabase",
            "monitoring": false,
            "primary_network_interface_id": "eni-05691d7db6a48d5c0",
            "private_dns": "ip-10-0-1-16.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-01749e64f5e53706a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ca7ac6350d95a458",
            "tags": {
              "Name": "dev-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-003b687c9f0fb5814"
            ]
          },
          "depends_on": [
            "aws_security_group.db_private",
            "aws_subnet.subnet_private"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f02c5a316fc6e5ad",
            "owner_id": "578368453353",
            "tags": {
              "Name": "{var.environment_name}-internet-gateway"
            },
            "vpc_id": "vpc-03da7e24fe1332b0d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03084a1670b56e03b",
            "owner_id": "578368453353",
            "tags": {
              "Name": "{var.environment_name}-internet-gateway"
            },
            "vpc_id": "vpc-026a95202eae0d22d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0dbacadbb7bd6e960",
            "owner_id": "578368453353",
            "tags": {
              "Name": "{var.environment_name}-internet-gateway"
            },
            "vpc_id": "vpc-0d7fc1a97a36a1f6d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_route",
      "name": "backend_to_internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f02c5a316fc6e5ad",
            "id": "r-rtb-0ce8146ef933271a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce8146ef933271a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table_public"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_route",
      "name": "backend_to_internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03084a1670b56e03b",
            "id": "r-rtb-0b9c941d7189dd8e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b9c941d7189dd8e7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table_public"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "backend_to_internet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dbacadbb7bd6e960",
            "id": "r-rtb-027ec027b1d6eb4f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027ec027b1d6eb4f0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table_public"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_to_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-085cbbf9d3e5a87313854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-085cbbf9d3e5a8731",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-00c66264922503278"
          },
          "depends_on": [
            "aws_route_table.route_table_private",
            "aws_vpc_peering_connection.peering_to_bastion",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_to_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-035fc8e88fd3196843854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035fc8e88fd319684",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-099903c2d88720655"
          },
          "depends_on": [
            "aws_route_table.route_table_private",
            "aws_vpc_peering_connection.peering_to_bastion",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_to_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fa1c2ea8eb08a1b63854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa1c2ea8eb08a1b6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-00c9c441beb5dafbe"
          },
          "depends_on": [
            "aws_route_table.route_table_private",
            "aws_vpc_peering_connection.peering_to_bastion",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route_to_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ce8146ef933271a93854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce8146ef933271a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-00c66264922503278"
          },
          "depends_on": [
            "aws_route_table.route_table_public",
            "aws_vpc_peering_connection.peering_to_bastion",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route_to_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b9c941d7189dd8e73854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b9c941d7189dd8e7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-099903c2d88720655"
          },
          "depends_on": [
            "aws_route_table.route_table_public",
            "aws_vpc_peering_connection.peering_to_bastion",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route_to_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-027ec027b1d6eb4f03854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027ec027b1d6eb4f0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-00c9c441beb5dafbe"
          },
          "depends_on": [
            "aws_route_table.route_table_public",
            "aws_vpc_peering_connection.peering_to_bastion",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_from_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-5257ff341218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-5257ff34",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-00c66264922503278"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.peering_to_bastion",
            "data.aws_route_table.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_from_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-5257ff343322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-5257ff34",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-099903c2d88720655"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.peering_to_bastion",
            "data.aws_route_table.default"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_from_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-5257ff34179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-5257ff34",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-00c9c441beb5dafbe"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.peering_to_bastion",
            "data.aws_route_table.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-085cbbf9d3e5a8731",
            "owner_id": "578368453353",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "{var.environment_name}-route-table-private"
            },
            "vpc_id": "vpc-03da7e24fe1332b0d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-035fc8e88fd319684",
            "owner_id": "578368453353",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "172.31.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-099903c2d88720655"
              }
            ],
            "tags": {
              "Name": "{var.environment_name}-route-table-private"
            },
            "vpc_id": "vpc-026a95202eae0d22d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fa1c2ea8eb08a1b6",
            "owner_id": "578368453353",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "172.31.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-00c9c441beb5dafbe"
              }
            ],
            "tags": {
              "Name": "{var.environment_name}-route-table-private"
            },
            "vpc_id": "vpc-0d7fc1a97a36a1f6d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ce8146ef933271a9",
            "owner_id": "578368453353",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "{var.environment_name}-route-table-public"
            },
            "vpc_id": "vpc-03da7e24fe1332b0d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b9c941d7189dd8e7",
            "owner_id": "578368453353",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03084a1670b56e03b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "172.31.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-099903c2d88720655"
              }
            ],
            "tags": {
              "Name": "{var.environment_name}-route-table-public"
            },
            "vpc_id": "vpc-026a95202eae0d22d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-027ec027b1d6eb4f0",
            "owner_id": "578368453353",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbacadbb7bd6e960",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "172.31.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-00c9c441beb5dafbe"
              }
            ],
            "tags": {
              "Name": "{var.environment_name}-route-table-public"
            },
            "vpc_id": "vpc-0d7fc1a97a36a1f6d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7ec23161281a309",
            "route_table_id": "rtb-085cbbf9d3e5a8731",
            "subnet_id": "subnet-084dd404d179e14bb"
          },
          "depends_on": [
            "aws_route_table.route_table_private",
            "aws_subnet.subnet_private"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0058cf7bb4188ae01",
            "route_table_id": "rtb-035fc8e88fd319684",
            "subnet_id": "subnet-0aff3f8a92f59e0d5"
          },
          "depends_on": [
            "aws_route_table.route_table_private",
            "aws_subnet.subnet_private"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a73b0a557cf112b1",
            "route_table_id": "rtb-0fa1c2ea8eb08a1b6",
            "subnet_id": "subnet-0ca7ac6350d95a458"
          },
          "depends_on": [
            "aws_route_table.route_table_private",
            "aws_subnet.subnet_private"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033486828fb36aa10",
            "route_table_id": "rtb-0ce8146ef933271a9",
            "subnet_id": "subnet-05de02cad5ce312c5"
          },
          "depends_on": [
            "aws_route_table.route_table_public",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3679673bdf2b963",
            "route_table_id": "rtb-0b9c941d7189dd8e7",
            "subnet_id": "subnet-0b7fa8c2132f3d8b3"
          },
          "depends_on": [
            "aws_route_table.route_table_public",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0392274ecf3dbe9d8",
            "route_table_id": "rtb-027ec027b1d6eb4f0",
            "subnet_id": "subnet-08a440140b759c626"
          },
          "depends_on": [
            "aws_route_table.route_table_public",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:security-group/sg-077abba92df0889fa",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-077abba92df0889fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to external world (8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to external world",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to external world",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ccf5474c524d69"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20190609143849263700000001",
            "name_prefix": null,
            "owner_id": "578368453353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-backend-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03da7e24fe1332b0d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:security-group/sg-0b88cbc07a7018d14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic from backend to outside",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "MySQL to stg DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077aed766b9d8a479"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0b88cbc07a7018d14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to external world (8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to external world",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to external world",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ccf5474c524d69"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20190606014749587200000001",
            "name_prefix": null,
            "owner_id": "578368453353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stg-backend-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a95202eae0d22d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:security-group/sg-09b4f5f0dfc6729de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic from backend to outside",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "MySQL to dev DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003b687c9f0fb5814"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-09b4f5f0dfc6729de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to external world (8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to external world",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS to external world",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ccf5474c524d69"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20190604064828433500000001",
            "name_prefix": null,
            "owner_id": "578368453353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-backend-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7fc1a97a36a1f6d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:security-group/sg-077ccf5474c524d69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "MySQL to dev DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003b687c9f0fb5814"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL to stg DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077aed766b9d8a479"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH to dev DB",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003b687c9f0fb5814"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "SSH to dev backend",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b4f5f0dfc6729de"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "SSH to stg DB",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077aed766b9d8a479"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "SSH to stg backend",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b88cbc07a7018d14"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-077ccf5474c524d69",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.208.220.0/24",
                  "209.146.25.246/32"
                ],
                "description": "SSH from allowed IP addresses",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": null,
            "owner_id": "578368453353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-4ec09329"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:security-group/sg-0c322858861ead701",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c322858861ead701",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from backend",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077abba92df0889fa"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from bastion",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ccf5474c524d69"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ccf5474c524d69"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20190609143852248900000002",
            "name_prefix": null,
            "owner_id": "578368453353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-db-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03da7e24fe1332b0d"
          },
          "depends_on": [
            "aws_security_group.backend_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:security-group/sg-077aed766b9d8a479",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-077aed766b9d8a479",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from backend",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b88cbc07a7018d14"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from bastion",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ccf5474c524d69"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ccf5474c524d69"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20190606014752148900000002",
            "name_prefix": null,
            "owner_id": "578368453353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stg-db-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-026a95202eae0d22d"
          },
          "depends_on": [
            "aws_security_group.backend_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:security-group/sg-003b687c9f0fb5814",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-003b687c9f0fb5814",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from backend",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b4f5f0dfc6729de"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from bastion",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ccf5474c524d69"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077ccf5474c524d69"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20190604064831207400000002",
            "name_prefix": null,
            "owner_id": "578368453353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-db-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7fc1a97a36a1f6d"
          },
          "depends_on": [
            "aws_security_group.backend_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_mysql_to_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "MySQL to prod DB",
            "from_port": 3306,
            "id": "sgrule-2910653221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077abba92df0889fa",
            "self": false,
            "source_security_group_id": "sg-0c322858861ead701",
            "to_port": 3306,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.backend_public",
            "aws_security_group.db_private"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_mysql_to_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "MySQL to stg DB",
            "from_port": 3306,
            "id": "sgrule-4261702492",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b88cbc07a7018d14",
            "self": false,
            "source_security_group_id": "sg-077aed766b9d8a479",
            "to_port": 3306,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.backend_public",
            "aws_security_group.db_private"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_mysql_to_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "MySQL to dev DB",
            "from_port": 3306,
            "id": "sgrule-4220263789",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09b4f5f0dfc6729de",
            "self": false,
            "source_security_group_id": "sg-003b687c9f0fb5814",
            "to_port": 3306,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.backend_public",
            "aws_security_group.db_private"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_to_outside",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All traffic from backend to outside",
            "from_port": 0,
            "id": "sgrule-81695138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-077abba92df0889fa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.backend_public"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_to_outside",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All traffic from backend to outside",
            "from_port": 0,
            "id": "sgrule-963940989",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b88cbc07a7018d14",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.backend_public"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend_to_outside",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All traffic from backend to outside",
            "from_port": 0,
            "id": "sgrule-942534861",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09b4f5f0dfc6729de",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.backend_public"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_mysql_to_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "MySQL to prod DB",
            "from_port": 3306,
            "id": "sgrule-2494926656",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077ccf5474c524d69",
            "self": false,
            "source_security_group_id": "sg-0c322858861ead701",
            "to_port": 3306,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.db_private"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_mysql_to_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "MySQL to stg DB",
            "from_port": 3306,
            "id": "sgrule-2948495646",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077ccf5474c524d69",
            "self": false,
            "source_security_group_id": "sg-077aed766b9d8a479",
            "to_port": 3306,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.db_private"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_mysql_to_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "MySQL to dev DB",
            "from_port": 3306,
            "id": "sgrule-2935890348",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077ccf5474c524d69",
            "self": false,
            "source_security_group_id": "sg-003b687c9f0fb5814",
            "to_port": 3306,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.db_private"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh_to_backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH to prod backend",
            "from_port": 22,
            "id": "sgrule-876231762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077ccf5474c524d69",
            "self": false,
            "source_security_group_id": "sg-077abba92df0889fa",
            "to_port": 22,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.backend_public"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh_to_backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "SSH to stg backend",
            "from_port": 22,
            "id": "sgrule-1218541386",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077ccf5474c524d69",
            "self": false,
            "source_security_group_id": "sg-0b88cbc07a7018d14",
            "to_port": 22,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.backend_public"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh_to_backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "SSH to dev backend",
            "from_port": 22,
            "id": "sgrule-3944459025",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077ccf5474c524d69",
            "self": false,
            "source_security_group_id": "sg-09b4f5f0dfc6729de",
            "to_port": 22,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.backend_public"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh_to_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "SSH to prod DB",
            "from_port": 22,
            "id": "sgrule-3024487266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077ccf5474c524d69",
            "self": false,
            "source_security_group_id": "sg-0c322858861ead701",
            "to_port": 22,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.db_private"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh_to_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "SSH to stg DB",
            "from_port": 22,
            "id": "sgrule-2404250940",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077ccf5474c524d69",
            "self": false,
            "source_security_group_id": "sg-077aed766b9d8a479",
            "to_port": 22,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.db_private"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh_to_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "SSH to dev DB",
            "from_port": 22,
            "id": "sgrule-2383261070",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-077ccf5474c524d69",
            "self": false,
            "source_security_group_id": "sg-003b687c9f0fb5814",
            "to_port": 22,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.db_private"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:subnet/subnet-084dd404d179e14bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-084dd404d179e14bb",
            "map_public_ip_on_launch": false,
            "owner_id": "578368453353",
            "tags": {
              "Name": "prod-subnet-private"
            },
            "vpc_id": "vpc-03da7e24fe1332b0d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:subnet/subnet-0aff3f8a92f59e0d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0aff3f8a92f59e0d5",
            "map_public_ip_on_launch": false,
            "owner_id": "578368453353",
            "tags": {
              "Name": "stg-subnet-private"
            },
            "vpc_id": "vpc-026a95202eae0d22d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:subnet/subnet-0ca7ac6350d95a458",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ca7ac6350d95a458",
            "map_public_ip_on_launch": false,
            "owner_id": "578368453353",
            "tags": {
              "Name": "dev-subnet-private"
            },
            "vpc_id": "vpc-0d7fc1a97a36a1f6d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:subnet/subnet-05de02cad5ce312c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.2.0.0/24",
            "id": "subnet-05de02cad5ce312c5",
            "map_public_ip_on_launch": true,
            "owner_id": "578368453353",
            "tags": {
              "Name": "prod-subnet-public"
            },
            "vpc_id": "vpc-03da7e24fe1332b0d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:subnet/subnet-0b7fa8c2132f3d8b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0b7fa8c2132f3d8b3",
            "map_public_ip_on_launch": true,
            "owner_id": "578368453353",
            "tags": {
              "Name": "stg-subnet-public"
            },
            "vpc_id": "vpc-026a95202eae0d22d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:subnet/subnet-08a440140b759c626",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-08a440140b759c626",
            "map_public_ip_on_launch": true,
            "owner_id": "578368453353",
            "tags": {
              "Name": "dev-subnet-public"
            },
            "vpc_id": "vpc-0d7fc1a97a36a1f6d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:vpc/vpc-03da7e24fe1332b0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-07896bff47a66156c",
            "default_route_table_id": "rtb-044ae70e18c1235b3",
            "default_security_group_id": "sg-0cab8569d1115a642",
            "dhcp_options_id": "dopt-b0d8a1d7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03da7e24fe1332b0d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-044ae70e18c1235b3",
            "owner_id": "578368453353",
            "tags": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:vpc/vpc-026a95202eae0d22d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-013d69c448b04f54d",
            "default_route_table_id": "rtb-094c9573bab778c2d",
            "default_security_group_id": "sg-01be43cfdf334d3d3",
            "dhcp_options_id": "dopt-b0d8a1d7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-026a95202eae0d22d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-094c9573bab778c2d",
            "owner_id": "578368453353",
            "tags": {
              "Name": "stg-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:578368453353:vpc/vpc-0d7fc1a97a36a1f6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bc5840496efee063",
            "default_route_table_id": "rtb-07e3a976de10acbba",
            "default_security_group_id": "sg-029c6db47b492c925",
            "dhcp_options_id": "dopt-b0d8a1d7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d7fc1a97a36a1f6d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07e3a976de10acbba",
            "owner_id": "578368453353",
            "tags": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.prod",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering_to_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00c66264922503278",
            "peer_owner_id": "578368453353",
            "peer_region": "ap-northeast-1",
            "peer_vpc_id": "vpc-4ec09329",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "prod-to-bastion-peering"
            },
            "vpc_id": "vpc-03da7e24fe1332b0d"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering_to_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-099903c2d88720655",
            "peer_owner_id": "578368453353",
            "peer_region": "ap-northeast-1",
            "peer_vpc_id": "vpc-4ec09329",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "stg-to-bastion-peering"
            },
            "vpc_id": "vpc-026a95202eae0d22d"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering_to_bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00c9c441beb5dafbe",
            "peer_owner_id": "578368453353",
            "peer_region": "ap-northeast-1",
            "peer_vpc_id": "vpc-4ec09329",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "dev-to-bastion-peering"
            },
            "vpc_id": "vpc-0d7fc1a97a36a1f6d"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}